# bandcamp_newsfeed_rss

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  EXTENDING.md  README.md  TODO.md  pyproject.toml  ruff.toml  test_main.http
.github/workflows/: checks.yml  codeql-analysis.yml  docker-image.yml
bandcamp_newsfeed_rss/: __main__.py  app.py  cache.py  config.py  models.py  router.py  rss.py
bandcamp_newsfeed_rss/generators/: __init__.py  rss.py
bandcamp_newsfeed_rss/routers/: __init__.py
bandcamp_newsfeed_rss/sources/: __init__.py  bandcamp.py  bandcamp_api.py  base.py  factory.py  protocol.py  registry.py
tests/: __init__.py  conftest.py  test_cache.py  test_e2e.py  test_factory.py  test_generators.py  test_main.http  test_registry.py  test_router.py  test_source_error_handling.py  test_source_parsing.py  test_sources.py
