[project]
name = "bandcamp-newsfeed-rss"
version = "0"
description = "FastAPI RSS Feed Generator for your Bandcamp newsfeed "
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "beautifulsoup4",
    "curl-cffi",
    "fastapi",
    "feedgen",
    "pydantic",
    "python-dotenv",
    "tzdata",
    "uvicorn",
]

# # relying on uv tool
#[dependency-groups]
#dev = [
#    "pre-commit>=4.1.0",
#    "ruff>=0.9.6",
#]
